# Factor-AI

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.MD  README.md  SECURITY.MD  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: provision_definitions.json  risk_rubric.json
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
infra/: app.py  cdk.json
infra/stacks/: agentcore_stack.py  auth_stack.py  observability_stack.py  storage_stack.py
policies/: data_access.cedar  session_isolation.cedar
scripts/: benchmark.py  deploy_agentcore.py  generate_sample_docs.py  seed_knowledge_base.py
src/factor/: __init__.py  app.py  config.py
src/factor/agents/: __init__.py  analysis.py  coordinator.py  ingestion.py  knowledge.py  prompts.py  reporting.py
src/factor/aws/: __init__.py  agentcore.py  bedrock.py  cognito.py  gateway.py  memory.py  observability.py  policy.py  s3.py
src/factor/db/: __init__.py  database.py
src/factor/knowledge/: __init__.py  embeddings.py  loader.py  vectorstore.py
src/factor/models/: __init__.py  analysis.py  document.py  report.py
src/factor/reporting/: __init__.py
src/factor/reporting/templates/: due_diligence_report.html
src/factor/tools/: __init__.py  chunking.py  citations.py  classification.py  comparison.py  detection.py  export.py  gaps.py  parsing.py  rag.py  scoring.py
src/frontend/: index.html  package.json
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/api/: client.ts
src/frontend/src/hooks/: useAgentStream.ts  useAnalysis.ts  (+1 more)
tests/: conftest.py
tests/test_agents/: test_analysis.py  test_coordinator.py  test_ingestion.py  test_knowledge.py
tests/test_knowledge/: test_loader.py  test_vectorstore.py
tests/test_tools/: test_chunking.py  test_citations  test_classification.py  test_comparison.py  test_detection.py  test_export.py  test_gaps.py  test_parsing.py  test_scoring.py
(+12 files in other folders)
